--- a/fr/actualites.html
+++ b/fr/actualites.html
@@ -25,11 +25,13 @@
   <main>
     <h2>Dernières actualités</h2>
     <article>
+      <h3>Aventa, un nouveau partenaire :</h3>
+      <p>L’entreprise <a href="https://www.aventa.fr/">Aventa</a> soutient notre projet grâce à un mécénat qui a permis l’acquisition de matériel de production.</p>
+    </article>
+    <article>
       <h3>Nouveau site internet :</h3>
       <p>L'équipe a lancé un nouveau site internet open source pour le projet.</p>
     </article>
-
-
   </main>
 
   <footer>
