--- a/en/news.html
+++ b/en/news.html
@@ -22,15 +22,18 @@
     </nav>
   </header>
 
-  <main>
-    <h2>Latest News</h2>
+<main>
+  <h2>Latest News</h2>
+  <article>
+    <h3>Aventa, a New Partner:</h3>
+    <p>The company <a href="https://www.aventa.fr/">Aventa</a> supports our project through sponsorship that made it possible to acquire production equipment.</p>
+  </article>
+  <article>
+    <h3>New Website:</h3>
+    <p>The team has launched a new open-source website for the project.</p>
+  </article>
+</main>
 
-    <article>
-      <h3>New Website Launch:</h3>
-      <p>The team has released a new open-source website for the project.</p>
-    </article>
-
-  </main>
 
 
   <footer>
